=== (next) ===
FIXED: updated specs symlinks
FIXED: to add specs into release package

=== 0.9.3 (2018-05-11) ===
CHANGED: to use FTN13 v1.0 specs instead of v0.3

=== 0.9.2 (2018-04-23) ===
CHANGED: upgraded dependency versions

=== 0.9.1 (2018-02-13) ===
FIXED: to check failure limit on sign/verify

=== 0.9.0 (2018-02-12) ===
Initial version