@@ -20,7 +20,6 @@
  */
 
 const PingService = require( 'futoin-executor/PingService' );
-const PingFace = require( 'futoin-invoker/PingFace' );
 
 const { DB_IFACEVER } = require( './main' );
 
@@ -60,7 +59,7 @@ class BaseService extends PingService {
         const ver = Face.LATEST_VERSION;
         const ifacever = `${ifacename}:${ver}`;
         const impl = new this( storage, options );
-        const spec_dirs = [ Face.spec(), PingFace.spec( Face.PING_VERSION ) ];
+        const spec_dirs = Face.spec();
 
         executor.register( as, ifacever, impl, spec_dirs );
 
