@@ -4,9 +4,9 @@
   "description": "FutoIn Secure Vault reference implementation",
   "main": "lib/main.js",
   "files": [
-    "dist",
-    "lib",
-    "specs",
+    "lib/",
+    "sql/",
+    "specs/",
     "*Face.js",
     "*Service.js",
     "futoin.json"
@@ -46,7 +46,7 @@
     "futoin-asyncsteps": "^1.11.3",
     "futoin-database": "^1.7.3",
     "futoin-executor": "^1.8.6",
-    "futoin-invoker": "^1.8.4",
+    "futoin-invoker": "^1.8.5",
     "grunt": "^1.0.2",
     "grunt-eslint": "^20.1.0",
     "grunt-jsdoc-to-markdown": "^4.0.0",
@@ -59,7 +59,7 @@
     "futoin-asyncsteps": "^1.11.3",
     "futoin-database": "^1.7.3",
     "futoin-executor": "^1.8.6",
-    "futoin-invoker": "^1.8.4"
+    "futoin-invoker": "^1.8.5"
   },
   "dependencies": {
     "futoin-hkdf": "^1.0.1",
